--- a/example/change-html-on-the-fly/sample.html
+++ b/example/change-html-on-the-fly/sample.html
@@ -17,7 +17,7 @@
 		var compiled_template = Handlebars.compile(template);
 		var html    = compiled_template(data);
 		return html;
-	}
+	};
 	var wait = function(callbacks, done) {
 	   var counter = callbacks.length;
 	   var next = function() {
@@ -28,28 +28,40 @@
 	   for(var i = 0; i < callbacks.length; i++) {
 	      callbacks[i](next);
 	   }
-	}
+	};
 	function download(link,results){
 		var a = function (next) {
 		   jQuery.get(link, function(res){
-	        	results[link]=res.responseText;
+		   		if(res.responseText){
+		   			results[link]=res.responseText;	
+		   		}else{
+		   			results[link]=res;
+		   		}
 	        	next();
 	    	});
 	  	};
 	  	return a;
-  	}
+  	};
+  	function downloadLinks(links,results,done){
+  		var downloaders=[];
+  		for (var i = 0; i < links.length; i++) {
+  			var downloader=download(links[i],results);
+  			downloaders.push(downloader);
+  		};
+  		wait(downloaders,done);
+  	};
 </script>
 
 <script >
+
+links=["http://www.bbc.co.uk/news/","mapping-rules/rule1.json","template/template1.html"];
 results={};
-downloadHtml=download('http://www.bbc.co.uk/news/',results);
-wait([downloadHtml],done);
+downloadLinks(links,results,done);
 function done(){
-	 html_old=results['http://www.bbc.co.uk/news/'];
-	console.log("html_old:"+html_old);
-	 mapping_rules=$.ajax({ url: "mapping-rules/rule1.json", async: false}).responseText;
+	 html_old=results["http://www.bbc.co.uk/news/"];
+	 mapping_rules=results["mapping-rules/rule1.json"];	 
+	 template   = results["template/template1.html"];
 	 data=h2h.html2data(html_old,mapping_rules);
-	 template   = $.ajax({ url: "template/template1.html", async: false}).responseText;
 	 html_new=h2h.data2html(data,template,handlebars_adapter);
 	$("#html-new").html(html_new);
 }
