--- a/example/change-html-on-the-fly/sample.html
+++ b/example/change-html-on-the-fly/sample.html
@@ -18,45 +18,13 @@
 		var html    = compiled_template(data);
 		return html;
 	};
-	var wait = function(callbacks, done) {
-	   var counter = callbacks.length;
-	   var next = function() {
-	      if(--counter == 0) {
-	         done();
-	      }
-	   };
-	   for(var i = 0; i < callbacks.length; i++) {
-	      callbacks[i](next);
-	   }
-	};
-	function download(link,results){
-		var a = function (next) {
-		   jQuery.get(link, function(res){
-		   		if(res.responseText){
-		   			results[link]=res.responseText;	
-		   		}else{
-		   			results[link]=res;
-		   		}
-	        	next();
-	    	});
-	  	};
-	  	return a;
-  	};
-  	function downloadLinks(links,results,done){
-  		var downloaders=[];
-  		for (var i = 0; i < links.length; i++) {
-  			var downloader=download(links[i],results);
-  			downloaders.push(downloader);
-  		};
-  		wait(downloaders,done);
-  	};
 </script>
 
 <script >
 
 links=["http://www.bbc.co.uk/news/","mapping-rules/rule1.json","template/template1.html"];
 results={};
-downloadLinks(links,results,done);
+h2h.downloadLinks(links,results,done);
 function done(){
 	 html_old=results["http://www.bbc.co.uk/news/"];
 	 mapping_rules=results["mapping-rules/rule1.json"];	 
